lab8/lab8.css
html {
  font-size: 120%;
  /* font-family: Arial, Helvetica, sans-serif; */
}

body {
  background-color: rgb(31, 31, 31);
  height: 100vh;
  font-family: Arial, Helvetica, sans-serif;

  color: #ccb9b9;
}

#result {
  margin-top: 40px;
  text-align: center;
  color: #ccb9b9;
  font-size: 1.2em;
  width: 100%;
}

#calcInterface {
  text-align: center;
  width: 80%;
  margin-left: 10%;
  margin-right: 10%;
  margin-top: 20px;
}

#input {
  margin-top: 20px;
  font-family: "Roboto", Helvetica, Arial, sans-serif;
  width: 25.95rem;
  height: 3rem;
  text-align: right;
  font-size: 30px;
  background-color: rgb(31, 31, 31);
  color: #cfcfcf;
  border: 2px solid rgb(238, 238, 238);
}

#input:hover {
  border: 2px solid rgb(44, 211, 211);
}

#input:focus {
  outline: none;
  /* border: 3px solid rgb(44, 211, 211); */
}

#operationPad {
  margin-left: 27.9%;
  text-align: justify;
  width: 20rem;
  display: grid;
  grid-template-columns: repeat(4, auto);
}
#operationPad > button {
  border: 0.5px solid  rgb(148, 148, 148);
  border-radius: 0;
  line-height: 1;
  padding: 1em 2.03rem 1em 2.04rem;
  font-family: "Roboto", Helvetica, Arial, sans-serif;
  font-size: 1.2em;
  font-weight: 500;
}

#equals {
  border: 0.5px solid  rgb(148, 148, 148);
  border-radius: 0;
  line-height: 1;
  padding: 1em 12.6rem 1em 12.6rem;
  font-family: "Roboto", Helvetica, Arial, sans-serif;
  font-size: 1.2em;
  background-color: rgb(243, 107, 28);
}

